Updated index and style sheet

--- a/index.html
+++ b/index.html
@@ -2,27 +2,28 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aryaman Patel</title>
 
-  <!--
-    - favicon
-  -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+    <!--
+      - favicon
+    -->
+    
+    <link rel="shortcut icon" href="./assets/images/avatar-1.png" type="image/x-icon">
+        
+    <!--
+      - custom css link
+    -->
+    <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!--
-    - custom css link
-  -->
-  <link rel="stylesheet" href="./assets/css/style.css">
-
-  <!--
-    - google font link
-  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <!--
+      - google font link
+    -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -240,8 +241,8 @@
           </section>
 
           <!--
-            - Education
-           -->
+      - Education
+     -->
 
           <section class="timeline">
 
@@ -279,8 +280,8 @@
           </section>
 
           <!--
-       - service
-     -->
+    - service
+    -->
 
           <section class="service">
 
@@ -436,54 +437,55 @@
 
 
           <!--
-      - clients
-    -->
+    - clients
 
-          <section class="clients">
 
-              <h3 class="h3 clients-title">Clients</h3>
+        <section class="clients">
 
-              <ul class="clients-list has-scrollbar">
+            <h3 class="h3 clients-title">Clients</h3>
 
-                  <li class="clients-item">
-                      <a href="#">
-                          <img src="./assets/images/logo-1-color.png" alt="client logo">
-                      </a>
-                  </li>
+            <ul class="clients-list has-scrollbar">
 
-                  <li class="clients-item">
-                      <a href="#">
-                          <img src="./assets/images/logo-2-color.png" alt="client logo">
-                      </a>
-                  </li>
+                <li class="clients-item">
+                    <a href="#">
+                        <img src="./assets/images/logo-1-color.png" alt="client logo">
+                    </a>
+                </li>
 
-                  <li class="clients-item">
-                      <a href="#">
-                          <img src="./assets/images/logo-3-color.png" alt="client logo">
-                      </a>
-                  </li>
+                <li class="clients-item">
+                    <a href="#">
+                        <img src="./assets/images/logo-2-color.png" alt="client logo">
+                    </a>
+                </li>
 
-                  <li class="clients-item">
-                      <a href="#">
-                          <img src="./assets/images/logo-4-color.png" alt="client logo">
-                      </a>
-                  </li>
+                <li class="clients-item">
+                    <a href="#">
+                        <img src="./assets/images/logo-3-color.png" alt="client logo">
+                    </a>
+                </li>
 
-                  <li class="clients-item">
-                      <a href="#">
-                          <img src="./assets/images/logo-5-color.png" alt="client logo">
-                      </a>
-                  </li>
+                <li class="clients-item">
+                    <a href="#">
+                        <img src="./assets/images/logo-4-color.png" alt="client logo">
+                    </a>
+                </li>
 
-                  <li class="clients-item">
-                      <a href="#">
-                          <img src="./assets/images/logo-6-color.png" alt="client logo">
-                      </a>
-                  </li>
+                <li class="clients-item">
+                    <a href="#">
+                        <img src="./assets/images/logo-5-color.png" alt="client logo">
+                    </a>
+                </li>
 
-              </ul>
+                <li class="clients-item">
+                    <a href="#">
+                        <img src="./assets/images/logo-6-color.png" alt="client logo">
+                    </a>
+                </li>
 
-          </section>
+            </ul>
+
+        </section>
+      -->
 
       </article>
 
@@ -495,131 +497,216 @@
         - #EXPERIENCE
       -->
 
-      <article class="resume" data-page="resume">
+      <article class="resume" data-page="experience">
 
-        <header>
-          <h2 class="h2 article-title">Resume</h2>
-        </header>
+          <header>
+              <h2 class="h2 article-title">Experience</h2>
+          </header>
 
-        <section class="timeline">
+          <section class="timeline">
 
-          <div class="title-wrapper">
-            <div class="icon-box">
-              <ion-icon name="book-outline"></ion-icon>
-            </div>
+              <ol class="timeline-list">
 
-            <h3 class="h3">Experience</h3>
-          </div>
+                  <li class="timeline-item">
 
-          <ol class="timeline-list">
+                      <h4 class="h4 timeline-item-title">Junior Software Developer Intern</h4>
+                      <a href="https://www.selfihealth.com/">
+                          <h2 class="h4 timeline-item-title">Selfihealth, Inc</h2>
+                      </a>
+                      <span>Sept 2023 — Current</span>
 
-            <li class="timeline-item">
+                      <ul class="timeline-bullet-points">
+                          <li class="timeline-text">
+                              Revamped app's homepage with vibrant user interface matching the companies color code and introduced
+                              avatars in addition to profile pictures for user profiles, enhancing visual appeal and interactivity.
+                          </li>
+                          <li class="timeline-text">
+                              Redesigned signup screen and profile details, transitioning from checkbox style selections to modern selectable
+                              pills, addressing callback issues and incorporating user feedback for improved usability
+                          </li>
+                          <li class="timeline-text">
+                              Independently improved algorithmic efficiency for match and group suggestions, ensuring more accurate and
+                              personalized suggestions for increased user engagement.
+                          </li>
+                          <li class="timeline-text">
+                              Resolved critical backend issues through API updates, MySQL database integration using Dockers, and frontend
+                              JavaScript adjustments. Ensured smooth functionality and data integrity for enhanced user experience.
+                          </li>
+                          <li class="timeline-text">
+                              Collaborated on a healthcare startup's iOS/Android app, enhancing 150+ JavaScript pages, utilizing Git for version
+                              control, and gaining practical AWS experience.
+                          </li>
+                      </ul>
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+                  </li>
 
-              <span>2015 — Present</span>
+                  <li class="timeline-item">
 
-              <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
-              </p>
+                      <h4 class="h4 timeline-item-title">Building Operations Manager</h4>
+                      <a href="https://sca.rutgers.edu/">
+                          <h2 class="h4 timeline-item-title">Rutgers Student Center and Activities</h2>
+                      </a>
+                      <span>Jan 2022 — Current</span>
 
-            </li>
+                      <ul class="timeline-bullet-points">
+                          <li class="timeline-text">
+                              Streamlined the coordination of more than 150 monthly events, holding a leadership role and achieving around
+                              95% attendee satisfaction rate, while fostering effective communication and teamwork among student staff.
+                          </li>
+                          <li class="timeline-text">
+                              Implemented efficient operational procedures, optimizing event setup timelines and customer service delivery;
+                              collaborated closely with the supervisor and colleagues to ensure prompt execution.
+                          </li>
 
-            <li class="timeline-item">
+                      </ul>
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+                  </li>
 
-              <span>2013 — 2015</span>
+              </ol>
 
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
+          </section>
 
-            </li>
+          <section class="skill">
+              <h3 class="h3 skills-title">Skills</h3>
+              <ul class="skills-list content-card">
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">Python</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">JavaScript</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">React-Native</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill">
+                          <h5 class="h5">HTML</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">CSS</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill">
+                          <h5 class="h5">Node.js</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">SQL</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">Java</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill">
+                          <h5 class="h5">XML</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">C</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">Git</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">API</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill">
+                          <h5 class="h5">Amazon Web Services</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">Visual Studio</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">Android Studio</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill">
+                          <h5 class="h5">Docker</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">Eclipse</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">Apache Tomcat</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">PyCharm</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill">
+                          <h5 class="h5">DBMS</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">Figma</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill">
+                          <h5 class="h5">R</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">Maven</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">JSP</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill">
+                          <h5 class="h5">Json</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">Photoshop</h5>
+                      </div>
+                  </li>
+                  <li class="skills-item">
+                      <div class="skill-pill" ;>
+                          <h5 class="h5">Debugging</h5>
+                      </div>
+                  </li>
+              </ul>
+          </section>
 
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Web designer</h4>
-
-              <span>2010 — 2013</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-
-            </li>
-
-          </ol>
-
-        </section>
-
-        <section class="skill">
-
-          <h3 class="h3 skills-title">My skills</h3>
-
-          <ul class="skills-list content-card">
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
-              </div>
-
-            </li>
-
-          </ul>
-
-        </section>
 
       </article>
 
