--- a/index.html
+++ b/index.html
@@ -212,33 +212,23 @@
 
             <section class="about-text">
                 <p>
-                    Hello, I'm Aryaman Patel, completing my Bachelors of Science degree in Computer Science from
-                    Rutgers University, graduating in May 2024. Recently certified as an AWS Certified Cloud Practitioner,
-                    I specialize in frontend and application development, with experience in Java, Python, JavaScript,
-                    React-Native, HTML, CSS, SQL, and AWS.
+                    Hello, I'm Aryaman Patel, completing my Bachelor of Science degree in Computer Science from Rutgers University - New Brunswick, graduating in May 2024. Recently certified as an AWS Certified Cloud Practitioner, I specialize in Application, frontend, and UI/UX development, with exceptional experience in Java, Python, JavaScript, React-Native, Node.js, HTML, CSS, SQL, and Amazon Web Services.
                 </p>
                 <p>
-                    During my internship at SelfiHealth, a healthcare startup, I've gained extensive professional
-                    full-stack developer experience. Leading impactful UI transformations and introducing user-friendly
-                    features, I've enhanced the SelfiHealth application's intuitiveness. Additionally, I collaborated
-                    on backend and database components with senior developers and co-founders.
+                    I currently work as a Junior Software Developer Intern at BandHealth, a healthcare startup, gaining extensive professional full-stack developer experience. Leading impactful UI transformations and introducing user-friendly features, I've enhanced the BandHealth application's intuitiveness. Additionally, I collaborated on backend and database components with senior developers and co-founders. I am currently responsible for most of the frontend changes and contribute vastly to a small development team.
                 </p>
                 <p>
-                    Beyond my internship, I've worked on diverse personal and university projects, including a
-                    JavaFX and XML-based photo library Android app, Python DevOps projects, and a MySQL-based DBMS project
-                    for an Auction Website. Please explore my project portfolio on GitHub.
+                    Beyond my internship, I've worked on diverse personal and university projects, including a JavaFX and XML-based photo library Android app, Python DevOps projects, and a MySQL-based DBMS project for an Auction Website.
                 </p>
                 <p>
-                    Eagerly seeking an entry-level position in Application Development, Frontend Development,
-                    Software Development, or UI/UX Development, I bring a robust computer science foundation,
-                    full-stack development skills, and a passion for crafting exceptional user experiences.
+                    I am excited to begin my professional career after I graduate and am looking forward to entry-level positions that align with my background.
                 </p>
 
             </section>
 
             <!--
-         - Education
-        -->
+     - Education
+    -->
 
             <section class="timeline">
 
@@ -262,13 +252,16 @@
                                 Bachelor of Science in Computer Science
                             </li>
                             <li class="timeline-text">
-                                Cumalative GPA: 3.4/4.0  |  Dean’s List: Spring 2022 – Fall 2023
-                            </li>
-                            <li class="timeline-text">
-                                Anticipated Graduation Date: 12th May 2024
+                                Anticipated Graduation Date: 14th May 2024
                             </li>
                             <li class="timeline-text">
                                 Minor in Entrepreneurship
+                            </li>
+                            <li class="timeline-text">
+                                Cumalative GPA: 3.4/4.0
+                            </li>
+                            <li class="timeline-text">
+                                Dean’s List: Spring 2022 – Fall 2023
                             </li>
                         </ul>
                     </li>
@@ -277,8 +270,8 @@
             </section>
 
             <!--
-        - service
-        -->
+    - service
+    -->
 
             <section class="service">
 
@@ -311,37 +304,29 @@
             </section>
 
 
-            <!--
-          - testimonials
-        -->
-
+            <!-- testimonials section -->
             <section class="testimonials">
 
-                <h3 class="h3 testimonials-title">Recommendation</h3>
+                <h3 class="h3 testimonials-title">Recommendations</h3>
 
                 <ul class="testimonials-list has-scrollbar">
-
 
                     <li class="testimonials-item">
                         <div class="content-card" data-testimonials-item>
 
                             <figure class="testimonials-avatar-box">
-                                <img src="./assets/images/bandhealth.png" alt="bandhealth" width="10" data-testimonials-avatar>
+                                <img src="./assets/images/bandhealth.png" alt="Bandhealth" width="60" data-testimonials-avatar>
                             </figure>
 
-                            <h4 class="h4 testimonials-item-title" data-testimonials-title>Selfihealth</h4>
+                            <h4 class="h4 testimonials-item-title" data-testimonials-title>Bandhealth, Inc</h4>
 
                             <div class="testimonials-text" data-testimonials-text>
                                 <p>
-                                    Aryaman has consistently demonstrated exceptional skills, dedication, and a strong work ethic throughout his
-                                    internship. He is extremely punctual, reliable, and proactive in his role. Aryaman did excellent work on
-                                    front-end development of our app, and quickly became an integral member of our team. Throughout his internship,
-                                    Aryaman consistently displayed an aptness for critical and creative thinking,
-                                    strong communication, teamwork, leadership, professionalism, and enthusiasm. He actively sought out self-
-                                    development opportunities from our in-house development team, going above and beyond the scope of his role
-                                    In summary, Aryaman Patel has been a standout intern, and I wholeheartedly recommend him for any future
-                                    professional opportunities. If you have any further questions or require additional information, please
-                                    feel free to reach out. We believe any team or organization would be fortunate to have him.
+                                    Aryaman has demonstrated an aptitude for software development, particularly in the frontend.
+                                    He was able to complete delegated tasks quickly and effectively with guidance appropriate for
+                                    any junior developer getting onboard a new project. His design skills are top notch. With very
+                                    little direction Aryaman redesigned our app’s home screen to bring the look and feel into
+                                    alignment with a change in brand identity.
                                 </p>
                             </div>
 
@@ -352,24 +337,35 @@
 
             </section>
 
-
             <!--
-          - testimonials modal
-        -->
+      - testimonials modal
+    -->
 
             <div class="modal-container" data-modal-container>
-
                 <div class="overlay" data-overlay></div>
-
                 <section class="testimonials-modal">
-
                     <button class="modal-close-btn" data-modal-close-btn>
                         <ion-icon name="close-outline"></ion-icon>
                     </button>
-
+                    <div class="modal-img-wrapper">
+                        <figure class="modal-avatar-box">
+                            <img src="./assets/images/bandhealth.png" alt="Bandhealth" width="80" data-modal-img>
+                        </figure>
+                        <img src="./assets/images/icon-quote.svg" alt="quote icon">
+                    </div>
+                    <div class="modal-content">
+                        <h4 class="h3 modal-title" data-modal-title>Bandhealth</h4>
+                        <div data-modal-text>
+                            <p></p>
+                        </div>
+                        <button id="viewPdfButton">View Full Recommendation Letter</button>
+                    </div>
                 </section>
-
             </div>
+
+            <!--
+      - Skills
+    -->
 
             <section class="skill">
                 <h3 class="h3 skills-title">Skills</h3>
@@ -580,7 +576,7 @@
 
                         <h4 class="h4 timeline-item-title">Junior Software Developer Intern</h4>
                         <a href="https://www.selfihealth.com/">
-                            <h2 class="h4 timeline-item-title">Selfihealth, Inc</h2>
+                            <h2 class="h4 timeline-item-title">Bandhealth, Inc</h2>
                         </a>
                         <span>Sept 2023 — Current</span>
 
