--- a/index.html
+++ b/index.html
@@ -680,6 +680,52 @@
 
                     <li class="timeline-item">
 
+                        <h4 class="h4 timeline-item-title">EDrater</h4>
+                        <a href="https://github.com/1aryamanp">
+                            <h2 class="h5">Personal Entrepreneurial Project</h2>
+                        </a>
+                        <span>Apr 2024 — Current</span>
+
+                        <ul class="timeline-bullet-points">
+                            <li class="timeline-text">
+                                Developing a website that solves the need for accessible and dedicated student course 
+                                reviews by allowing students with a .edu email to log in and provide their honest feedback.
+                            </li>
+                            <li class="timeline-text">
+                                Implementing a leaderboard layout to showcase the easiest courses rated by students, providing 
+                                a valuable resource for course selection based on student feedback.
+                            </li>
+                            <li class="timeline-text">
+                                Learning TypeScript, Next.js, and MySQL while leveraging AWS for deployment to create a 
+                                scalable and efficient platform..
+                            </li>
+                        </ul>
+
+                    </li>
+                    
+                    <li class="timeline-item">
+
+                        <h4 class="h4 timeline-item-title">Face and Digit Classification</h4>
+                        <a href="https://github.com/1aryamanp">
+                            <h2 class="h5">University Project: Intro to A.I.</h2>
+                        </a>
+                        <span>Apr 2024 — May 2024</span>
+
+                        <ul class="timeline-bullet-points">
+                            <li class="timeline-text">
+                                Designed and implemented perceptron and two-layer neural network classifiers for face and digit 
+                                recognition, incorporating feature extraction and data analysis.
+                            </li>
+                            <li class="timeline-text">
+                                Analyzed and compared training times and prediction errors, producing a report that highlights the 
+                                effectiveness and learning curves of both algorithms.
+                            </li>
+                        </ul>
+
+                    </li>
+                    
+                    <li class="timeline-item">
+
                         <h4 class="h4 timeline-item-title">Fast Trajectory Replanning in Unknown Gridworlds</h4>
                         <a href="https://github.com/1aryamanp">
                             <h2 class="h5">University Project: Intro to A.I.</h2>
