updated About ME page

--- a/index.html
+++ b/index.html
@@ -212,16 +212,25 @@
 
             <section class="about-text">
                 <p>
-                    Hello, I'm Aryaman Patel, completing my Bachelor of Science degree in Computer Science from Rutgers University - New Brunswick, graduating in May 2024. Recently certified as an AWS Certified Cloud Practitioner, I specialize in Application, frontend, and UI/UX development, with exceptional experience in Java, Python, JavaScript, React-Native, Node.js, HTML, CSS, SQL, and Amazon Web Services.
+                    Hello, I'm Aryaman Patel, a recent graduate of Rutgers University - New Brunswick, 
+                    with a Bachelor of Science in Computer Science. I'm an AWS Certified Cloud Practitioner 
+                    specializing in application development, front-end programming, and UI/UX design. 
+                    My technical skills include Java, Python, JavaScript, React-Native, Node.js, HTML, 
+                    CSS, SQL, and Amazon Web Services.
                 </p>
                 <p>
-                    I currently work as a Junior Software Developer Intern at BandHealth, a healthcare startup, gaining extensive professional full-stack developer experience. Leading impactful UI transformations and introducing user-friendly features, I've enhanced the BandHealth application's intuitiveness. Additionally, I collaborated on backend and database components with senior developers and co-founders. I am currently responsible for most of the frontend changes and contribute vastly to a small development team.
+                    In my role as a Junior Software Developer Intern at BandHealth, a healthcare startup, 
+                    I led UI transformations and introduced user-friendly features, enhancing the app's intuitiveness. 
+                    I collaborated on backend and database components, contributing significantly to front-end 
+                    changes and playing a key role in a small development team.
                 </p>
                 <p>
-                    Beyond my internship, I've worked on diverse personal and university projects, including a JavaFX and XML-based photo library Android app, Python DevOps projects, and a MySQL-based DBMS project for an Auction Website.
+                    My experience extends to personal and academic projects, such as a JavaFX and 
+                    XML-based photo library Android app, Python DevOps projects, and a MySQL-based DBMS auction website.
                 </p>
                 <p>
-                    I am excited to begin my professional career after I graduate and am looking forward to entry-level positions that align with my background.
+                    I am actively seeking an entry-level position where I can leverage my skills, grow professionally, 
+                    and contribute to innovative software projects that align with my background.
                 </p>
 
             </section>
@@ -252,7 +261,7 @@
                                 Bachelor of Science in Computer Science
                             </li>
                             <li class="timeline-text">
-                                Graduation Date: 11th May 2024
+                                Graduated: 11th May 2024
                             </li>
                             <li class="timeline-text">
                                 Minor in Entrepreneurship
@@ -261,7 +270,7 @@
                                 Cumalative GPA: 3.4/4.0
                             </li>
                             <li class="timeline-text">
-                                Dean’s List: Spring 2022 – Fall 2023
+                                Dean’s List: Spring 2022, Fall 2022, Spring 2023, Fall 2023, Spring 2024
                             </li>
                         </ul>
                     </li>
